--- a/p8105_fp_ds100_yg2625.md
+++ b/p8105_fp_ds100_yg2625.md
@@ -3,6 +3,8 @@ p8105\_fp\_ds100\_yg2625
 Yue Gu
 11/30/2018
 
+### Regression Model Analysis
+
 #### Load BRFSS & Injury Data
 
 ``` r
@@ -11,8 +13,11 @@ brfss_data = read_csv("./data/brfss_data.csv") %>%
 
 injury_data = read_csv("./data/NCHS_-_Injury_Mortality__United_States.csv") %>% 
   janitor::clean_names()
-  
+```
 
+#### Convert variables into 'factor' to fit a linear model
+
+``` r
 new_injury = 
   injury_data %>% 
   filter(injury_mechanism == "All Mechanisms",
