--- a/p8105_fp_ds100_yg2625.md
+++ b/p8105_fp_ds100_yg2625.md
@@ -32,3 +32,5 @@ new_injury =
          race = as.factor(ifelse(race == "Non-Hispanic white", "white", "non-white")),
          age_group_years = as.factor(age_group_years))
 ```
+
+#### Construct a regression model using 'suicide death rate' as the outcome of interest with 'sex', 'age group' and 'race' being its predictors
