Added pairwise comparison for year and age_groups

--- a/p8105_fp_ds100_yg2625.Rmd
+++ b/p8105_fp_ds100_yg2625.Rmd
@@ -41,5 +41,9 @@ new_injury =
 ```{r lm}
 fit_suicide = lm(suicide_dr ~ sex + race + age_group_years + year, data = new_injury)
 summary(fit_suicide)
+
+pairwise.t.test(new_injury$suicide_dr, new_injury$age_group_years, p.adj = 'bonferroni')
+
+fit_suicide %>% aov(.) %>%  TukeyHSD()
 ```
 
