--- a/p8105_fp_ds100_yg2625.md
+++ b/p8105_fp_ds100_yg2625.md
@@ -71,3 +71,74 @@ summary(fit_suicide)
     ## Residual standard error: 5.8 on 203 degrees of freedom
     ## Multiple R-squared:  0.7274, Adjusted R-squared:  0.7113 
     ## F-statistic: 45.15 on 12 and 203 DF,  p-value: < 2.2e-16
+
+``` r
+pairwise.t.test(new_injury$suicide_dr, new_injury$age_group_years, p.adj = 'bonferroni')
+```
+
+    ## 
+    ##  Pairwise comparisons using t tests with pooled SD 
+    ## 
+    ## data:  new_injury$suicide_dr and new_injury$age_group_years 
+    ## 
+    ##       < 15    15–24  25–44  45–64  65–74 
+    ## 15–24 0.0017  -      -      -      -     
+    ## 25–44 9.3e-06 1.0000 -      -      -     
+    ## 45–64 8.3e-06 1.0000 1.0000 -      -     
+    ## 65–74 0.0015  1.0000 1.0000 1.0000 -     
+    ## 75+   2.9e-06 1.0000 1.0000 1.0000 1.0000
+    ## 
+    ## P value adjustment method: bonferroni
+
+``` r
+fit_suicide %>% aov(.) %>%  TukeyHSD()
+```
+
+    ##   Tukey multiple comparisons of means
+    ##     95% family-wise confidence level
+    ## 
+    ## Fit: aov(formula = .)
+    ## 
+    ## $sex
+    ##          diff       lwr       upr p adj
+    ## 1-0 -12.56459 -14.12074 -11.00844     0
+    ## 
+    ## $race
+    ##                     diff      lwr      upr p adj
+    ## white-non-white 10.76934 9.118789 12.41988     0
+    ## 
+    ## $age_group_years
+    ##                    diff        lwr       upr     p adj
+    ## 15–24-< 15   9.26683105  5.3337932 13.199869 0.0000000
+    ## 25–44-< 15  12.10844126  8.1754034 16.041479 0.0000000
+    ## 45–64-< 15  12.16419064  8.2311528 16.097229 0.0000000
+    ## 65–74-< 15   9.32099907  5.3879612 13.254037 0.0000000
+    ## 75+-< 15    12.67080504  8.7377672 16.603843 0.0000000
+    ## 25–44-15–24  2.84161021 -1.0914277  6.774648 0.3026025
+    ## 45–64-15–24  2.89735959 -1.0356783  6.830397 0.2814195
+    ## 65–74-15–24  0.05416802 -3.8788698  3.987206 1.0000000
+    ## 75+-15–24    3.40397399 -0.5290639  7.337012 0.1318887
+    ## 45–64-25–44  0.05574939 -3.8772885  3.988787 1.0000000
+    ## 65–74-25–44 -2.78744218 -6.7204800  1.145596 0.3240247
+    ## 75+-25–44    0.56236379 -3.3706741  4.495402 0.9984729
+    ## 65–74-45–64 -2.84319157 -6.7762294  1.089846 0.3019894
+    ## 75+-45–64    0.50661440 -3.4264235  4.439652 0.9990775
+    ## 75+-65–74    3.34980597 -0.5832319  7.282844 0.1442054
+    ## 
+    ## $year
+    ##                  diff       lwr      upr     p adj
+    ## 2012-2011 0.212133477 -3.720904 4.145171 0.9999873
+    ## 2013-2011 0.215043989 -3.717994 4.148082 0.9999865
+    ## 2014-2011 0.706522705 -3.226515 4.639561 0.9954751
+    ## 2015-2011 0.778233496 -3.154804 4.711271 0.9928918
+    ## 2016-2011 1.049947338 -2.883091 4.982985 0.9725441
+    ## 2013-2012 0.002910512 -3.930127 3.935948 1.0000000
+    ## 2014-2012 0.494389228 -3.438649 4.427427 0.9991806
+    ## 2015-2012 0.566100019 -3.366938 4.499138 0.9984235
+    ## 2016-2012 0.837813860 -3.095224 4.770852 0.9900103
+    ## 2014-2013 0.491478716 -3.441559 4.424517 0.9992037
+    ## 2015-2013 0.563189507 -3.369848 4.496227 0.9984621
+    ## 2016-2013 0.834903348 -3.098135 4.767941 0.9901684
+    ## 2015-2014 0.071710791 -3.861327 4.004749 0.9999999
+    ## 2016-2014 0.343424632 -3.589613 4.276462 0.9998623
+    ## 2016-2015 0.271713841 -3.661324 4.204752 0.9999567
