write motivation, related work, initial question, data.

--- a/p8105_fp_ds100_zf2212.md
+++ b/p8105_fp_ds100_zf2212.md
@@ -7,14 +7,14 @@ Catherine
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ───────────────────────────────────────────────────────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ────────────────────────────────────────────────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
     ## ✔ tibble  1.4.2     ✔ dplyr   0.7.6
     ## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
     ## ✔ readr   1.1.1     ✔ forcats 0.3.0
 
-    ## ── Conflicts ──────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ── Conflicts ───────────────────────────────────────────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
@@ -100,3 +100,48 @@ brfss %>% ggplot(aes(x = year, y = data_value, color = `Race/Ethnicity`)) +
 ```
 
 ![](p8105_fp_ds100_zf2212_files/figure-markdown_github/unnamed-chunk-1-1.png)
+
+Motivation:
+===========
+
+Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who die by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant combined with the analysis to age-specific rate and related confidence interval.
+
+Related work:
+=============
+
+Anything that inspired you, such as a paper, a web site, or something we discussed in class.
+
+Initial questions:
+==================
+
+The initial thought of this project is to discover the relationship between suicide and people's mental status. We have found two separated datasets, in which one is the Injury Mortality data in the US, the other contains people's depression status in the US. Since both of the two datasets contains information for age, race, and gender, we decided to compare the trend of suicide death rates with depression prevalence under these three categories.
+
+Data:
+=====
+
+Source, scraping method, cleaning, etc.
+
+BRFSS Prevalence Data (2011 to present)
+---------------------------------------
+
+Data from the Behavioral Risk Factor Surveillance System (BRFSS) Prevalence Data (2011 to present) were accessed from cdc.gov.(<https://chronicdata.cdc.gov/Behavioral-Risk-Factors/Behavioral-Risk-Factor-Surveillance-System-BRFSS-P/dttw-5yxu>) The version of the data that we will use in this analysis can be found in our Github (./data).
+
+### Data acquisition and description
+
+The specific data to be used in this projext, linked to at the top of this page, was accessed in December 2018 using the code below.
+
+``` r
+library(tidyverse)
+
+data_BRFSS = 
+  read_csv(file='./data/Behavioral_Risk_Factor_Surveillance_System__BRFSS__Prevalence_Data__2011_to_present_.csv')
+
+data_BRFSS %>% 
+  select(., Question) %>%
+  distinct(.,)
+
+brfss_data = brfss_raw %>% 
+   filter(year %in% c(2011, 2012, 2013, 2014, 2015, 2016),
+          break_out_category %in% c("Age Group", "Race/Ethnicity", "Gender")) %>% 
+   spread(key = break_out_category, break_out)
+```
