--- a/p8105_fp_ds100_Report.Rmd
+++ b/p8105_fp_ds100_Report.Rmd
@@ -6,7 +6,8 @@ output: github_document
 ---
 
 # Motivation:
-Provide an overview of the project goals and motivation.
+
+Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who die by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant combined with the analysis to age-specific rate and related confidence interval.
 
 
 # Related work:
@@ -14,11 +15,46 @@ Anything that inspired you, such as a paper, a web site, or something we discuss
 
 
 # Initial questions:
-What questions are you trying to answer? How did these questions evolve over the course of the project? What new questions did you consider in the course of your analysis?
 
+The initial thought of this project is to discover the relationship between suicide and people's mental status. We have found two separated datasets, in which one is the Injury Mortality data in the US, the other contains people's depression status in the US. Since both of the two datasets contains information for age, race, and gender, we decided to compare the trend of suicide death rates with depression prevalence under these three categories.
 
 # Data:
-Source, scraping method, cleaning, etc.
+Source, scraping method, cleaning, etc. 
+
+## BRFSS Prevalence Data (2011 to present)
+
+Data from the Behavioral Risk Factor Surveillance System (BRFSS) Prevalence Data (2011 to present) were accessed from cdc.gov.(https://chronicdata.cdc.gov/Behavioral-Risk-Factors/Behavioral-Risk-Factor-Surveillance-System-BRFSS-P/dttw-5yxu) The version of the data that we will use in this analysis can be found in our Github (./data).
+
+Methodology: http://www.cdc.gov/brfss/factsheets/pdf/DBS_BRFSS_survey.pdf 
+
+Glossary: http://apps.nccd.cdc.gov/BRFSSQuest/index.asp
+
+### Data acquisition and description
+
+As the original dataset is too large, we download the dataset and acquire the data we need. The specific data to be used in this project was accessed in December 2018 using the code below. 
+
+```{r eval=FALSE}
+library(tidyverse)
+
+data_BRFSS = 
+  read_csv(file='./data/Behavioral_Risk_Factor_Surveillance_System__BRFSS__Prevalence_Data__2011_to_present_.csv')
+
+data_BRFSS %>% 
+  select(., Question) %>%
+  distinct(.,)
+
+brfss_data = brfss_raw %>% 
+   filter(year %in% c(2011, 2012, 2013, 2014, 2015, 2016),
+          break_out_category %in% c("Age Group", "Race/Ethnicity", "Gender")) %>% 
+   spread(key = break_out_category, break_out)
+```
+
+The original dataset contains 1,386,855 rows and 27 column. For further use, we make a preliminary dataset. The preliminary dataset contains 8931 rows and 14 columns. The complete data dictionary is linked above.
+
+## Further cleaning
+```{r}
+
+```
 
 
 # Exploratory analysis:
