--- a/p8105_fp_ds100_yg2625.md
+++ b/p8105_fp_ds100_yg2625.md
@@ -45,33 +45,39 @@ new_injury =
 #### Construct a regression model using 'suicide death rate' as the outcome of interest with 'sex', 'age group' and 'race' being its predictors
 
 ``` r
-fit_suicide = lm(suicide_dr ~ sex + race + age_group_years, data = new_injury)
+fit_suicide = lm(suicide_dr ~ sex + race + age_group_years + year, data = new_injury)
 summary(fit_suicide)
 ```
 
     ## 
     ## Call:
-    ## lm(formula = suicide_dr ~ sex + race + age_group_years, data = new_injury)
+    ## lm(formula = suicide_dr ~ sex + race + age_group_years + year, 
+    ##     data = new_injury)
     ## 
     ## Residuals:
     ##      Min       1Q   Median       3Q      Max 
-    ## -17.9401  -4.3036  -0.2355   4.5197  20.1065 
+    ## -18.0264  -3.9721  -0.2391   4.3182  19.5502 
     ## 
     ## Coefficients:
     ##                        Estimate Std. Error t value Pr(>|t|)    
-    ## (Intercept)              8.3337     1.0676   7.806 2.80e-13 ***
-    ## sex1                   -12.5646     0.8717 -14.414  < 2e-16 ***
-    ## raceNon-Hispanic black  -0.9120     1.0676  -0.854    0.394    
-    ## raceNon-Hispanic white  10.3133     1.0676   9.660  < 2e-16 ***
-    ## age_group_years25–44     7.4750     1.3076   5.717 3.71e-08 ***
-    ## age_group_years45–64     7.5308     1.3076   5.759 2.99e-08 ***
-    ## age_group_years65+       6.3625     1.0676   5.959 1.06e-08 ***
+    ## (Intercept)              7.8401     1.4606   5.368 2.16e-07 ***
+    ## sex1                   -12.5646     0.8808 -14.265  < 2e-16 ***
+    ## raceNon-Hispanic black  -0.9120     1.0787  -0.845    0.399    
+    ## raceNon-Hispanic white  10.3133     1.0787   9.561  < 2e-16 ***
+    ## age_group_years25–44     7.4750     1.3212   5.658 5.14e-08 ***
+    ## age_group_years45–64     7.5308     1.3212   5.700 4.15e-08 ***
+    ## age_group_years65+       6.3625     1.0787   5.898 1.51e-08 ***
+    ## year2012                 0.2121     1.5256   0.139    0.890    
+    ## year2013                 0.2150     1.5256   0.141    0.888    
+    ## year2014                 0.7065     1.5256   0.463    0.644    
+    ## year2015                 0.7782     1.5256   0.510    0.611    
+    ## year2016                 1.0499     1.5256   0.688    0.492    
     ## ---
     ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
     ## 
-    ## Residual standard error: 6.406 on 209 degrees of freedom
-    ## Multiple R-squared:  0.6577, Adjusted R-squared:  0.6478 
-    ## F-statistic: 66.92 on 6 and 209 DF,  p-value: < 2.2e-16
+    ## Residual standard error: 6.472 on 204 degrees of freedom
+    ## Multiple R-squared:  0.6589, Adjusted R-squared:  0.6405 
+    ## F-statistic: 35.82 on 11 and 204 DF,  p-value: < 2.2e-16
 
 ``` r
 pairwise.t.test(new_injury$suicide_dr, new_injury$age_group_years, p.adj = 'bonferroni')
@@ -100,26 +106,44 @@ fit_suicide %>% aov(.) %>%  TukeyHSD()
     ## 
     ## $sex
     ##          diff       lwr       upr p adj
-    ## 1-0 -12.56459 -14.28307 -10.84612     0
+    ## 1-0 -12.56459 -14.30119 -10.82799     0
     ## 
     ## $race
     ##                                             diff       lwr       upr
-    ## Non-Hispanic black-Hispanic           -0.9120358 -3.432199  1.608128
-    ## Non-Hispanic white-Hispanic           10.3133176  7.793154 12.833481
-    ## Non-Hispanic white-Non-Hispanic black 11.2253534  8.705190 13.745517
-    ##                                         p adj
-    ## Non-Hispanic black-Hispanic           0.66968
-    ## Non-Hispanic white-Hispanic           0.00000
-    ## Non-Hispanic white-Non-Hispanic black 0.00000
+    ## Non-Hispanic black-Hispanic           -0.9120358 -3.458863  1.634791
+    ## Non-Hispanic white-Hispanic           10.3133176  7.766490 12.860145
+    ## Non-Hispanic white-Non-Hispanic black 11.2253534  8.678526 13.772180
+    ##                                           p adj
+    ## Non-Hispanic black-Hispanic           0.6751966
+    ## Non-Hispanic white-Hispanic           0.0000000
+    ## Non-Hispanic white-Non-Hispanic black 0.0000000
     ## 
     ## $age_group_years
     ##                    diff       lwr       upr     p adj
-    ## 25–44-<25    7.47502573  4.088660 10.861391 0.0000002
-    ## 45–64-<25    7.53077512  4.144410 10.917140 0.0000002
-    ## 65+-<25      6.36248653  3.597531  9.127442 0.0000001
-    ## 45–64-25–44  0.05574939 -3.854488  3.965987 0.9999819
-    ## 65+-25–44   -1.11253920 -4.498904  2.273826 0.8299698
-    ## 65+-45–64   -1.16828858 -4.554654  2.218077 0.8082467
+    ## 25–44-<25    7.47502573  4.052757 10.897295 0.0000003
+    ## 45–64-<25    7.53077512  4.108506 10.953044 0.0000002
+    ## 65+-<25      6.36248653  3.568216  9.156757 0.0000001
+    ## 45–64-25–44  0.05574939 -3.895946  4.007445 0.9999824
+    ## 65+-25–44   -1.11253920 -4.534808  2.309730 0.8342908
+    ## 65+-45–64   -1.16828858 -4.590557  2.253980 0.8130266
+    ## 
+    ## $year
+    ##                  diff       lwr      upr     p adj
+    ## 2012-2011 0.212133477 -4.176897 4.601164 0.9999927
+    ## 2013-2011 0.215043989 -4.173987 4.604074 0.9999922
+    ## 2014-2011 0.706522705 -3.682508 5.095553 0.9973082
+    ## 2015-2011 0.778233496 -3.610797 5.167264 0.9957454
+    ## 2016-2011 1.049947338 -3.339083 5.438978 0.9831005
+    ## 2013-2012 0.002910512 -4.386120 4.391941 1.0000000
+    ## 2014-2012 0.494389228 -3.894641 4.883420 0.9995197
+    ## 2015-2012 0.566100019 -3.822930 4.955131 0.9990719
+    ## 2016-2012 0.837813860 -3.551217 5.226844 0.9939877
+    ## 2014-2013 0.491478716 -3.897552 4.880509 0.9995334
+    ## 2015-2013 0.563189507 -3.825841 4.952220 0.9990948
+    ## 2016-2013 0.834903348 -3.554127 5.223934 0.9940845
+    ## 2015-2014 0.071710791 -4.317320 4.460741 1.0000000
+    ## 2016-2014 0.343424632 -4.045606 4.732455 0.9999199
+    ## 2016-2015 0.271713841 -4.117317 4.660744 0.9999749
 
 Depression model
 ----------------
@@ -4695,3 +4719,35 @@ fit_race %>% aov(.) %>% TukeyHSD()
     ## Hispanic-Black, non-Hispanic            5.85e-05
     ## White, non-Hispanic-Black, non-Hispanic 0.00e+00
     ## White, non-Hispanic-Hispanic            0.00e+00
+
+Anaysis Report
+--------------
+
+To maintain comparability between injury mechanism and depression(brfss) data, we only generate statistic results for:
+
+-   race:
+    -   Non-Hispanic Black
+    -   Non-Hispanic White
+    -   Hispanic
+-   age groups(in years):
+    -   &lt; 25
+    -   25-44
+    -   45-64
+    -   65+
+-   year 2011-2016
+
+Using injury data, we first calculate suicide death rate by
+
+$$\\frac{Deaths}{Population} \* 100000$$
+
+which represents the number of deaths caused by suicide per 100,000 units population. Then, we transform sex, race, age, year into factor variables for future regression model building. Specifically, sex = 0 if it's male and sex = 1 if it's female.
+
+Then, we construct regression for suicide death rate as response, sex, race, age(in years), year as predictor. By observing the coefficients estimates and p-values, there is several interesting finds for suicide death rates: 1. sex has **significant** p-value &lt; 0.0001: there is significant difference of suicide rate between male and female group and female tends to have lower suicide death rate.
+2. race of Non-Hispanic white has **significant** p-value *(with baseline group of Hispanic)*: there is significant difference of suicide rate between Non-hispanic Whites and Hispanic and Non-hispanic Black have non-significant difference with Hispanic. Whites tend to have higher suicide death rate compared to Hispanic and Blacks.
+3. all groups of age(in years) have **significant** p-value *(with baseline group of age &lt; 25)*: there is significant difference between all age groups with baseline age group(age &lt; 25).
+4. all years have **non-significant** p-value *(with baseline group of year 2011)*: there is not significant difference between all years with year 2011.
+
+Then, we make pairwise comparison with Bonferroni and Tukey for race, age and year groups. Findings:
+1. **Race**: Non-Hispanic White and Hispanic, Non-Hispanic White and Black have significant different suicide death rate. White have the highest suicide death rate among 3 race groups. And Blacks have smaller suicide death rate compared to Hispanic and Whites.
+2. **Age**: 25-44 and &lt;25, 45-64 and &lt;25, 65+ and &lt;25 have significant different suicide death rate. Age groups that are &gt;25 all have higher suicide death rate compared to age &lt;25. And age 65+ have smaller suicide death rate compared to 25-44, 45-64 groups.
+3. **Year**: All pairwise comparison for years don't generate significant result, meaning there is not significant different suicide death rate in different years.
