add things to data cleaning

--- a/p8105_fp_ds100_zf2212.md
+++ b/p8105_fp_ds100_zf2212.md
@@ -109,7 +109,7 @@ Suicide is a leading cause of death in the US. Suicide rates increased in nearly
 Related work:
 =============
 
-Anything that inspired you, such as a paper, a web site, or something we discussed in class.
+Suicide has ranked as the 10th leading cause of death among Americans for many years. <https://www.verywellmind.com/suicide-rates-overstated-in-people-with-depression-2330503>
 
 Initial questions:
 ==================
@@ -126,9 +126,13 @@ BRFSS Prevalence Data (2011 to present)
 
 Data from the Behavioral Risk Factor Surveillance System (BRFSS) Prevalence Data (2011 to present) were accessed from cdc.gov.(<https://chronicdata.cdc.gov/Behavioral-Risk-Factors/Behavioral-Risk-Factor-Surveillance-System-BRFSS-P/dttw-5yxu>) The version of the data that we will use in this analysis can be found in our Github (./data).
 
+Methodology: <http://www.cdc.gov/brfss/factsheets/pdf/DBS_BRFSS_survey.pdf>
+
+Glossary: <http://apps.nccd.cdc.gov/BRFSSQuest/index.asp>
+
 ### Data acquisition and description
 
-The specific data to be used in this projext, linked to at the top of this page, was accessed in December 2018 using the code below.
+As the original dataset is too large, we download the dataset and acquire the data we need. The specific data to be used in this project was accessed in December 2018 using the code below.
 
 ``` r
 library(tidyverse)
@@ -144,4 +148,12 @@ brfss_data = brfss_raw %>%
    filter(year %in% c(2011, 2012, 2013, 2014, 2015, 2016),
           break_out_category %in% c("Age Group", "Race/Ethnicity", "Gender")) %>% 
    spread(key = break_out_category, break_out)
+
+brfss_tidy = brfss_data %>% 
+  select(year, locationabbr, locationdesc, response, sample_size, `Age Group`, Gender, `Race/Ethnicity`, geo_location)
 ```
+
+The original dataset contains 1,386,855 rows and 27 column. For further use, we make a preliminary dataset. The preliminary dataset contains 8931 rows and 14 columns. The complete data dictionary is linked above.
+
+Further cleaning
+----------------
