--- a/p8105_fp_ds100_yg2625.md
+++ b/p8105_fp_ds100_yg2625.md
@@ -347,9 +347,9 @@ To maintain comparability between injury mechanism and depression(brfss) data, w
 
 Using injury data, we first calculate suicide death rate by
 
-$$\\frac{Deaths}{Population} \* 100000$$
-
-which represents the number of deaths caused by suicide per 100,000 units population. Then, we transform sex, race, age, year into factor variables for future regression model building.
+$$  \\frac{Deaths}{Population} \* 100000
+$$
+ which represents the number of deaths caused by suicide per 100,000 units population. Then, we transform sex, race, age, year into factor variables for future regression model building.
 
 Then, we construct regression for suicide death rate as response, sex, race, age(in years), year as predictor. By observing the coefficients estimates and p-values, there is several interesting finds for suicide death rates:
 1. sex has **significant** p-value &lt; 0.0001: there is significant difference of suicide rate between male and female group and female tends to have lower suicide death rate.
