--- a/p8105_fp_ds100_yg2625.Rmd
+++ b/p8105_fp_ds100_yg2625.Rmd
@@ -127,7 +127,7 @@ fit_race %>% aov(.) %>% TukeyHSD()
 
 
 
-## Anaysis Report
+## Analysis Report
 To maintain comparability between injury mechanism and depression(brfss) data, we only generate statistic results for:  
 
 * race:
@@ -194,7 +194,8 @@ Because of the data structure of brfss data, the age, gender, race are independe
 
 ### Additional Analysis for Location:
 
-**Location Model**: 
+**Location Model**:   
+
 #### Location
 ```{r}
 new_brfss_location =
