--- a/p8105_fp_ds100_Report.Rmd
+++ b/p8105_fp_ds100_Report.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "p8105_fp_ds100_Report"
-author: "Yue Gu, Jianghui Lin, Junyuan Zheng, Jianyou Liu, Zhiqian Fang"
+author: "Yue Gu (yg2625), Jianghui Lin (jl5172), Junyuan Zheng (jz3036), Jianyou Liu (jl5296), Zhiqian Fang (zf2212)"
 date: "12/3/2018"
 output: github_document
 ---
@@ -8,24 +8,23 @@ output: github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = F)
 library(tidyverse)
+library(patchwork)
 ```
 
 # Motivation:
 
-Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who die by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant combined with the analysis to age-specific rate and related confidence interval.
+Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who died by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant combined with the analysis to suicide death rate and related confidence interval.
 
 
 # Related work:
-Anything that inspired you, such as a paper, a web site, or something we discussed in class.
 
 Suicide has ranked as the 10th leading cause of death among Americans for many years. https://www.verywellmind.com/suicide-rates-overstated-in-people-with-depression-2330503
 
 # Initial questions:
 
-The initial thought of this project is to discover the relationship between suicide and people's mental status. We have found two separated datasets, in which one is the Injury Mortality data in the US, the other contains people's depression status in the US. Since both of the two datasets contains information for age, race, and gender, we decided to compare the trend of suicide death rates with depression prevalence under these three categories.
+The initial thought of this project is to discover the relationship between suicide and people's mental status. We have found two separated datasets, in which one is the Injury Mortality data in the US, the other contains people's depression status in the US. Since both of the two datasets contain information for age, race, and gender, we decided to compare the trend of suicide death rates with depression prevalence under these three categories.
 
 # Data:
-Source, scraping method, cleaning, etc. 
 
 ## BRFSS Prevalence Data (2011 to present)
 
@@ -39,7 +38,7 @@ Glossary: http://apps.nccd.cdc.gov/BRFSSQuest/index.asp
 
 As the original dataset is too large, we download the dataset and acquire the data we need. The specific data to be used in this project was accessed in December 2018 using the code below. 
 
-```{r eval=FALSE}
+```{r eval=FALSE, echo=TRUE}
 library(tidyverse)
 
 data_BRFSS = 
@@ -58,8 +57,7 @@ brfss_data = brfss_raw %>%
 The original dataset contains 1,386,855 rows and 27 column. For further use, we make a preliminary dataset. The preliminary dataset contains 8931 rows and 14 columns. We save the preliminary dataset in our data file. The complete data dictionary is linked above.
 
 ## Further cleaning
-```{r}
-library(tidyverse)
+```{r eval=TRUE, echo=TRUE, message=FALSE}
 # load the preliminary dataset
 brfss_data = read.csv("./data/brfss_data.csv") 
 # method 1 - select the columns we need
@@ -84,7 +82,7 @@ brfss_gender = brfss_data %>%
 
 As we will do our followin analysis by age, race, and gender, we created three tidy subsets by age, race, and gender. 
 
-```{r}
+```{r eval=TRUE, echo=TRUE, message=FALSE}
  injury_data = read_csv("./data/NCHS_-_Injury_Mortality__United_States.csv") %>% 
   janitor::clean_names() %>%   # tidy the variable names
   #distinct(year, sex,race,age_group_years, injury_intent, .keep_all = TRUE) %>% 
@@ -101,29 +99,16 @@ The original dataset contains 98280 rows and 17 columns.  For further use, we ma
 
 # Exploratory analysis:
 
-
-Visualizations, summaries, and exploratory statistical analyses. Justify the steps you took, and show any major changes to your ideas.
-
-```{r data_import, message = FALSE}
-library(tidyverse)
-library(plotly)
-library(patchwork)
-data_BRFSS = 
-  read_csv(file = './data/brfss_data.csv')
-data_IM = 
-  read_csv(file = './data/NCHS_-_Injury_Mortality__United_States.csv')
-```
-
 Creat a new data from the original data just for this section, so that it won't affect other part of the analysis:
-For BRFSS dataset, select some variables that might be usful for later analysis:
+For BRFSS dataset, select some variables (year, locationabbr, locationdesc, response, sample_size, age_group, gender, race_ethnicity) that might be usful for later analysis.
 ```{r tidy_data_BRFSS}
-data_BRFSS_JZ = data_BRFSS %>% 
+data_BRFSS_JZ = brfss_data %>% 
   janitor::clean_names(.) %>% 
   select(., year, locationabbr, locationdesc, response, sample_size, age_group, gender, race_ethnicity)
 ```
 For the Injury Mortality dataset, filter out 'Suicide' as our focus. Get rid of summarized rows for age, sex and race. Since the cases and total population do not differ by 'injury_mechanism', here I use 'All Mechanisms' to prevend over counting for the population. 
 ```{r tidy_data_IM}
-data_IM_JZ = data_IM %>% 
+data_IM_JZ = injury_data %>% 
   janitor::clean_names(.) %>% 
   filter(., injury_intent == 'Suicide',
     year == 2011 | year == 2012 | year == 2013 | year == 2014 | year == 2015 | year == 2016,
@@ -133,7 +118,7 @@ data_IM_JZ = data_IM %>%
     injury_mechanism == 'All Mechanisms')
 ```
 
-__Exploring by 'Age':__
+## Exploring by 'Age':
 
 ```{r BRFSS_IM_year_age}
 BRFSS_age_plot = 
@@ -178,12 +163,13 @@ data_IM_JZ %>%
 
 BRFSS_age_plot + IM_age_plot
 ```
+
 First thing I did is to combine ages to make the two dataset compariable. One defect of this analysis is that the BRFSS data only includes 18-24 age group compared to '< 25' age group in the mortality dataset. If we just look at the other three age groups, for people from 25-64, high prevalence of depression seems to be consistant with suicide death rate. However, regardless of age group '65+' having a relative low depression prevalence, their suicide rate remains relatively high. \
 When using the 'str_replace' function for '75+', the result kept giving me an extra '+' at the end of the string. So I set '65+' for the '45–64' group so that they can combine to become the '65+' group. \
 For both Prevalence and Death Rate, 5% CI were calculated. Usually large CI stands for a relatively small sample size. \
-Another thing that is worth noticing is that in the raw dataset, the '–' in between '45–64' is not the usual '-' in the keyboard, So I had to copy and paste the symble to my code. \
+Another thing that is worth noticing is that in the raw dataset, the '–' in between '45–64' is not the usual '-' in the keyboard, So I had to copy and paste the symble to my code. 
 
-__Exploring by 'Race':__
+## Exploring by 'Race':
 
 ```{r BRFSS_IM_year_race}
 BRFSS_race_plot =
@@ -225,9 +211,10 @@ data_IM_JZ %>%
 
 BRFSS_race_plot + IM_race_plot
 ```
+
 Race categories other than White, Black, and Hispanic were combined into 'Other'. Here we see White category has both high depression prevalence as well as suicide rate.
 
-__Exploring by 'Gender':__
+## Exploring by 'Gender':
 
 ```{r BRFSS_IM_year_gender}
 BRFSS_gender_plot = 
@@ -262,13 +249,12 @@ data_IM_JZ %>%
 
 BRFSS_gender_plot + IM_gender_plot
 ```
+
 Surprisingly, even female appears to have more depression, their suicide rate is much lower than male. Could this give a hint that women are more endurable to depression?
 
 # Additional analysis:
-If you undertake formal statistical analyses, describe these in detail
 
-
-# Regression Model Analysis
+## Regression Model Analysis
 
 
 ```{r read_data, message = FALSE}
@@ -280,7 +266,7 @@ injury_data = read_csv("./data/NCHS_-_Injury_Mortality__United_States.csv") %>%
 
 ```
 
-## Suicide rate model
+### Suicide rate model
 
 ```{r convert_var}
 new_injury = 
@@ -314,7 +300,7 @@ fit_suicide %>% aov(.) %>%  TukeyHSD()
 ```
 
 
-## Depression model
+### Depression model
 
 #### Age model
 ```{r}
@@ -383,7 +369,7 @@ fit_race %>% aov(.) %>% TukeyHSD()
 
 
 
-## Analysis Report
+### Analysis Report
 To maintain comparability between injury mechanism and depression(brfss) data, we only generate statistic results for:  
 
 * race:
@@ -465,7 +451,6 @@ From model output, we observe that almost all p-value except for VI are non-sign
 
 
 # Discussion:
-What were your findings? Are they what you expect? What insights into the data can you make?
 
 From 2011 through 2016, the general depression prevalence in US goes up then goes down again. On the other hand, the suicide rate has been increasing each year. Even we know that depression is just one causal factor to suicide, we expected seeing similar trend for the three groups (age, race, gender). The result are generally as expected while there are some noticable ones. \
 People older than 65 have a relatively low prevalence of depression while still keep a high suicide rate. In contrary to Black people who have both low depression prevalence and suicide rate, White people are high in both of the statistics. Women are reported to have higher prevalence of depression compared to men, while keep a relatively low death rate of suicide rate. Any apparent difference of trend on the two plot might suggest other causal factors in the 'causal pies'. However, the association between depression and suicide is kind of hard to test. For rare cases like suicide, case-control study should be a suitable way to conduct the research, while the psychological status like depression are really complicated to detect, especially for suicide cases. \
